--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -3,7 +3,8 @@ title: Introduction
 description: "Introduction to Speakeasy."
 ---
 
-import { CodeWithTabs } from "@/mdx/components";
+import { CardGrid, CodeWithTabs } from "@/mdx/components";
+import { productCards } from "@/lib/data/docs/introduction";
 
 # Introduction to Speakeasy
 
@@ -23,11 +24,7 @@ That's the problem Speakeasy exists to solve.
 
 ## Speakeasy Products
 
-{/* <div className="py-8">
-    <div className="max-w-7xl mx-auto">
-        <ProductCards />
-    </div>
-</div> */}
+<CardGrid cards={productCards} />
 
 ## Before you Begin
 
