--- a/docs/prep-openapi/overlays/create-overlays.mdx
+++ b/docs/prep-openapi/overlays/create-overlays.mdx
@@ -70,9 +70,7 @@ actions:
     remove: true
 ```
 
----
-
-#### !!steps `info`
+#### !!steps info
 
 - `title`: **Required** – Describes the overlay's purpose
 - `version`: **Required** – Identifies the document's version
@@ -94,57 +92,110 @@ actions:
     remove: true
 ```
 
----
-
-#### !!steps `actions`
+#### !!steps actions
 
 **Required** – An array of ordered actions for the target document, with at least one object per action.
 
 ```yaml ! overlay.yaml
 # !focus(5:13)
+overlay: 1.0.0
+info:
+  title: Overlay to fix the Speakeasy bar
+  version: 0.0.1
+actions:
+  - target: "$.tags"
+    description: Add a Snacks tag to the global tags list
+    update:
+      - name: Snacks
+        description: All methods related to serving snacks
+  - target: "$.paths['/dinner']"
+    description: Remove all paths related to serving dinner
+    remove: true
 ```
 
----
-
-#### !!steps `target`
+#### !!steps target
 
 **Required** – Specifies a JSONPath query expression to identify the target objects in the target document.
 
 ```yaml ! overlay.yaml
 # !focus(6)
+overlay: 1.0.0
+info:
+  title: Overlay to fix the Speakeasy bar
+  version: 0.0.1
+actions:
+  - target: "$.tags"
+    description: Add a Snacks tag to the global tags list
+    update:
+      - name: Snacks
+        description: All methods related to serving snacks
+  - target: "$.paths['/dinner']"
+    description: Remove all paths related to serving dinner
+    remove: true
 ```
 
----
-
-#### !!steps `description`
+#### !!steps description
 
 **Optional** – Brief explanation of the action being performed. Supports CommonMark syntax for rich text representation.
 
 ```yaml ! overlay.yaml
 # !focus(7)
+overlay: 1.0.0
+info:
+  title: Overlay to fix the Speakeasy bar
+  version: 0.0.1
+actions:
+  - target: "$.tags"
+    description: Add a Snacks tag to the global tags list
+    update:
+      - name: Snacks
+        description: All methods related to serving snacks
+  - target: "$.paths['/dinner']"
+    description: Remove all paths related to serving dinner
+    remove: true
 ```
 
----
-
-#### !!steps `update`
+#### !!steps update
 
 **Optional** – Defines the properties and values to merge with the objects identified by the target. This property is disregarded if the `remove` property is set to `true`.
 
 ```yaml ! overlay.yaml
 # !focus(8:10)
+overlay: 1.0.0
+info:
+  title: Overlay to fix the Speakeasy bar
+  version: 0.0.1
+actions:
+  - target: "$.tags"
+    description: Add a Snacks tag to the global tags list
+    update:
+      - name: Snacks
+        description: All methods related to serving snacks
+  - target: "$.paths['/dinner']"
+    description: Remove all paths related to serving dinner
+    remove: true
 ```
 
----
-
-#### !!steps `remove`
+#### !!steps remove
 
 **Optional** – A boolean value indicating whether to remove the target object from its map or array. Defaults to `false` if not specified.
 
 ```yaml ! overlay.yaml
 # !focus(13)
+overlay: 1.0.0
+info:
+  title: Overlay to fix the Speakeasy bar
+  version: 0.0.1
+actions:
+  - target: "$.tags"
+    description: Add a Snacks tag to the global tags list
+    update:
+      - name: Snacks
+        description: All methods related to serving snacks
+  - target: "$.paths['/dinner']"
+    description: Remove all paths related to serving dinner
+    remove: true
 ```
-
----
 
 </Spotlight>
 
