--- a/docs/snippet-ai/integrate-via-react.mdx
+++ b/docs/snippet-ai/integrate-via-react.mdx
@@ -3,7 +3,7 @@ title: Integrate via React
 description: Help your users integrate in seconds with AI-powered usage snippets.
 ---
 
-import { CodeWithTabs } from "@/mdx/components";
+import { CodeWithTabs, Table } from "@/mdx/components";
 
 # Integrate via React
 
@@ -48,24 +48,39 @@ export default MyComponent;
 
 SnippetAI currently supports code generation for the following languages:
 
-| Language   | Supported |
-| ---------- | --------- |
-| TypeScript | ✅        |
-| Python     | ✅        |
-| PHP        | ✅        |
-| Java       | ✅        |
-| C#         | ✅        |
-| Go         | ✅        |
+<Table
+  data={[
+    { language: "TypeScript", supported: "✅" },
+    { language: "Python", supported: "✅" },
+    { language: "PHP", supported: "✅" },
+    { language: "Java", supported: "✅" },
+    { language: "C#", supported: "✅" },
+    { language: "Go", supported: "✅" }
+  ]}
+  columns={[
+    { key: "language", header: "Language" },
+    { key: "supported", header: "Supported" }
+  ]}
+/>
 
 ### Props
 
 The `SnippetAI` component accepts the following props:
-| Prop | Type | Description | Default |
-| ---------------- | ------------------- | --------------------------------------------------------------------------------------------------- | ------------------------------- |
-| `codeLang` | `string` | Programming language for suggestion results (`typescript`, `python`, `go`, `java`, `csharp`, `php`) | `typescript` |
-| `toggleShortcut` | `string` | Keyboard shortcut to open the Command Bar | `$mod+k` (cmd+k / ctrl+k) |
-| `zIndex` | `string` | Z-index of the command bar | `1000` |
-| `suggestions` | `string[]` | Searchable list of suggestions for the command bar | `[]` |
+
+<Table
+  data={[
+    { prop: "`codeLang`", type: "`string`", description: "Programming language for suggestion results (`typescript`, `python`, `go`, `java`, `csharp`, `php`)", default: "`typescript`" },
+    { prop: "`toggleShortcut`", type: "`string`", description: "Keyboard shortcut to open the Command Bar", default: "`$mod+k` (cmd+k / ctrl+k)" },
+    { prop: "`zIndex`", type: "`string`", description: "Z-index of the command bar", default: "`1000`" },
+    { prop: "`suggestions`", type: "`string[]`", description: "Searchable list of suggestions for the command bar", default: "`[]`" }
+  ]}
+  columns={[
+    { key: "prop", header: "Prop" },
+    { key: "type", header: "Type" },
+    { key: "description", header: "Description" },
+    { key: "default", header: "Default" }
+  ]}
+/>
 
 ### Language Selection
 
