--- a/guides/index.mdx
+++ b/guides/index.mdx
@@ -10,6 +10,16 @@ Here, you'll find a comprehensive collection of step-by-step guides, best practi
 
 import { CardGrid } from "@/components/card-grid";
 import { allFrameworkGuidesData } from "@/lib/data/openapi/framework-all-guides";
+import { guideCategories } from "@/lib/data/docs/guide-categories";
+import { openapiGuidesData } from "@/lib/data/docs/openapi-guides";
+import { sdkGuidesData } from "@/lib/data/docs/sdk-guides";
+import { overlayGuidesData } from "@/lib/data/docs/overlay-guides";
+import { hookGuidesData } from "@/lib/data/docs/hook-guides";
+import { terraformGuidesData } from "@/lib/data/docs/terraform-guides";
+
+## Guide Categories
+
+<CardGrid cards={guideCategories} heading="" />
 
 ## Framework Guides
 
@@ -17,13 +27,22 @@ If you haven't used OpenAPI before, start with our guide to creating an OpenAPI 
 
 <CardGrid cards={allFrameworkGuidesData} heading="OpenAPI with Popular Frameworks" />
 
-## OpenAPI guides
+## OpenAPI Guides
 
-- [Complete OpenAPI reference guide](/openapi)
-- [Using `additionalProperties` with Speakeasy](/guides/openapi/additionalproperties)
-- [Using `x-codeSamples` to sync SDK usage snippets and your documentation site](guides/openapi/x-codesamples)
+<CardGrid cards={openapiGuidesData} heading="" />
 
-## SDKs
+## SDK Guides
 
-- [Create a monorepo with Speakeasy and GitHub](/guides/sdks/creating-a-monorepo)
-- [Utilizing user agent strings for telemetry](/guides/sdks/utilizing-user-agent-strings)
+<CardGrid cards={sdkGuidesData} heading="" />
+
+## SDK Overlays
+
+<CardGrid cards={overlayGuidesData} heading="" />
+
+## Hook Guides
+
+<CardGrid cards={hookGuidesData} heading="" />
+
+## Terraform Guides
+
+<CardGrid cards={terraformGuidesData} heading="" />
