--- a/docs/snippet-ai/integrate-via-script.mdx
+++ b/docs/snippet-ai/integrate-via-script.mdx
@@ -3,13 +3,15 @@ title: Integrate via Script
 description: Add AI-powered usage snippets to your documentation in seconds.
 ---
 
+import { Table } from "@/mdx/components";
+
 # Integrate via Script
 
 Install the SnippetAI web component via a script tag.
 This is useful for doc providers that don't allow you to add your own script tags but do allow custom JS.
 
 If you are in a react environment or can add a custom script tag, take a look at
-[Integrate via React](/docs/snippet-ai/integrate-via-react) or [Integrate via Web Component](/docs/snippet-ai/integrate-via-web-component) are preferred.
+[Integrate via React](/docs/snippet-ai/integrate-via-react) or [Integrate via Web Component](/docs/snippet-ai/integrate-via-web-component) which are preferred.
 
 ## Required Steps
 Add the two components to your documentation site;
@@ -49,11 +51,19 @@ Below is an example minimal HTML installation.
 
 In the above script you can configure your component by adjusting the following HTML attributes
 
-| Attribute          | Description                                                                                      | Required | Default                     |
-| ------------------ | ------------------------------------------------------------------------------------------------ | -------- | --------------------------- |
-| `publishingtoken`  | Your public API key for authentication                                                           | Yes      | -                           |
-| `codelang`         | Programming language for code generation (`typescript`, `python`, `go`, `java`, `csharp`, `php`) | No       | -                           |
-| `triggerelementid` | Custom ID attribute for a button element that will open SnippetAI when clicked                   | No       | -                           |
-| `toggleshortcut`   | Keyboard shortcut to open the Command Bar                                                        | No       | `"$mod+k"` (cmd+k / ctrl+k) |
-| `zindex`           | Z-index of the command bar                                                                       | No       | `"1000"`                    |
-| `suggestions`      | Searchable list of suggestions for the command bar                                               | No       | `"[]"`                      |
+<Table
+  data={[
+    { attribute: "`publishingtoken`", description: "Your public API key for authentication", required: "Yes", default: "—" },
+    { attribute: "`codelang`", description: "Programming language for code generation (`typescript`, `python`, `go`, `java`, `csharp`, `php`)", required: "No", default: "—" },
+    { attribute: "`triggerelementid`", description: "Custom ID attribute for a button element that will open SnippetAI when clicked", required: "No", default: "—" },
+    { attribute: "`toggleshortcut`", description: "Keyboard shortcut to open the Command Bar", required: "No", default: "`\"$mod+k\"` (cmd+k / ctrl+k)" },
+    { attribute: "`zindex`", description: "Z-index of the command bar", required: "No", default: "`\"1000\"`" },
+    { attribute: "`suggestions`", description: "Searchable list of suggestions for the command bar", required: "No", default: "`\"[]\"`" }
+  ]}
+  columns={[
+    { key: "attribute", header: "Attribute" },
+    { key: "description", header: "Description" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default" }
+  ]}
+/>
