--- a/docs/snippet-ai/integrate-via-web-component.mdx
+++ b/docs/snippet-ai/integrate-via-web-component.mdx
@@ -3,7 +3,7 @@ title: Integrate via Web Component
 description: Add AI-powered usage snippets to your documentation in seconds.
 ---
 
-import { CodeWithTabs } from "@/mdx/components";
+import { CodeWithTabs, Table } from "@/mdx/components";
 
 # Integrate via Web Component
 
@@ -41,14 +41,22 @@ Add this to your HTML file:
 
 After installing the web component, you can add the `<snippet-ai>` element to your HTML. The component accepts the following attributes:
 
-| Attribute          | Description                                                                                      | Required | Default                     |
-| ------------------ | ------------------------------------------------------------------------------------------------ | -------- | --------------------------- |
-| `publishingtoken`  | Your public API key for authentication                                                           | Yes      | -                           |
-| `codelang`         | Programming language for code generation (`typescript`, `python`, `go`, `java`, `csharp`, `php`) | No       | -                           |
-| `triggerelementid` | Custom ID attribute for a button element that will open SnippetAI when clicked                   | No       | -                           |
-| `toggleshortcut`   | Keyboard shortcut to open the Command Bar                                                        | No       | `"$mod+k"` (cmd+k / ctrl+k) |
-| `zindex`           | Z-index of the command bar                                                                       | No       | `"1000"`                    |
-| `suggestions`      | Searchable list of suggestions for the command bar                                               | No       | `"[]"`                      |
+<Table
+  data={[
+    { attribute: "`publishingtoken`", description: "Your public API key for authentication", required: "Yes", default: "-" },
+    { attribute: "`codelang`", description: "Programming language for code generation (`typescript`, `python`, `go`, `java`, `csharp`, `php`)", required: "No", default: "-" },
+    { attribute: "`triggerelementid`", description: "Custom ID attribute for a button element that will open SnippetAI when clicked", required: "No", default: "-" },
+    { attribute: "`toggleshortcut`", description: "Keyboard shortcut to open the Command Bar", required: "No", default: "`\"$mod+k\"` (cmd+k / ctrl+k)" },
+    { attribute: "`zindex`", description: "Z-index of the command bar", required: "No", default: "`\"1000\"`" },
+    { attribute: "`suggestions`", description: "Searchable list of suggestions for the command bar", required: "No", default: "`\"[]\"`" }
+  ]}
+  columns={[
+    { key: "attribute", header: "Attribute" },
+    { key: "description", header: "Description" },
+    { key: "required", header: "Required" },
+    { key: "default", header: "Default" }
+  ]}
+/>
 
 The component will automatically initialize and display the code generator interface when added to your page.
 
