chore: update subtitle to description

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -13,7 +13,7 @@ import { cards, intro } from "@/lib/data/docs/overview";
           {intro.title}
         </Heading>
       )}
-      {intro?.subtitle && <Text>{intro.subtitle}</Text>}
+      {intro?.description && <Text>{intro.description}</Text>}
       <CardGrid cards={cards?.start} />
       <CardGrid cards={cards?.quickstart} columns={2} heading="Start" />
       <CardGrid columns={2} cards={cards?.learn} heading="Learn" />
