fix: add callout

--- a/docs/customize/basics.mdx
+++ b/docs/customize/basics.mdx
@@ -3,6 +3,8 @@
  description: "Discover recommended and optional customizations you can make to your Speakeasy SDK pipeline to enhance the user experience."
 ---
 
+import { Callout } from "@/mdx/components";
+
 # Customization basics
 
 The Speakeasy SDK pipeline uses sensible defaults to generate SDKs, but various customizations can improve the user experience. Customizations can be applied using the following methods:
@@ -85,7 +87,7 @@ For example, you might create a script that:
 
 
 
-<Callout title="CAUTION" variant="warning">
+<Callout title="Caution" type="warning">
 
   Modifying dependency versions may lead to compatibility issues or unexpected behavior. Proceed with caution and thorough testing.
 
