chore: add search

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,15 +5,18 @@ description: "Read Speakeasy documentation for more information on our features 
 
 import { CardGrid, Heading, Text } from "@/mdx/components";
 import { cards, intro } from "@/lib/data/docs/overview";
-
+import InkeepSearchBar from "@/lib/inkeep/search";
 
     <div className="container space-y-8">
       {intro?.title && (
-        <Heading as="h1" variant="xl" className="text-foreground">
+        <Heading as="h1" variant="xl" className="text-foreground mt-10">
           {intro.title}
         </Heading>
       )}
-      {intro?.description && <Text>{intro.description}</Text>}
+      {intro?.description && <Text className="mb-10">{intro.description}</Text>}
+      <div className="my-10">
+      <InkeepSearchBar />
+      </div>
       <CardGrid cards={cards?.start} />
       <CardGrid cards={cards?.quickstart} columns={2} heading="Start" />
       <CardGrid columns={2} cards={cards?.learn} heading="Learn" />
